--- a/copy_src_to_dst.ipynb
+++ b/copy_src_to_dst.ipynb
@@ -20,9 +20,9 @@
    "outputs": [],
    "source": [
     "# Define excel file name, source and destination folder\n",
-    "xlsx = 'C:/Users/xtrai/Downloads/file.xlsx'\n",
-    "src_path = 'C:/Users/xtrai/Downloads/tox21-challenge/'\n",
-    "dst_path = 'C:/Users/xtrai/Downloads/tox21-challenge/destination'"
+    "xlsx = '/path/to/file.xlsx'\n",
+    "src_path = '/path/to/foler/'\n",
+    "dst_path = '/path/to/folder/'"
    ]
   },
   {
