--- a/copy_src_to_dst.ipynb
+++ b/copy_src_to_dst.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "# Define excel file name, source and destination folder\n",
     "xlsx = '/path/to/file.xlsx'\n",
-    "src_path = '/path/to/foler/'\n",
+    "src_path = '/path/to/folder/'\n",
     "dst_path = '/path/to/folder/'"
    ]
   },
